policies/custom/service_type/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sservicetypepolicy
  annotations:
    description: >-
      Provisioning services with allowed types
spec:
  crd:
    spec:
      names:
        kind: K8sServiceTypePolicy
      validation:
        openAPIV3Schema:
          properties:
            serviceTypes:
              description: "List of allowed types for services"
              type: array
              item: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sservicetypepolicy

        violation[{"msg": msg, "details": {}}] { 
            not service_type_is_allowed           
            msg := sprintf("This service type is not allowed for the current namespace: %v", [input.review.object.spec.type])
        }
          
        service_type_is_allowed {
        	input.parameters.serviceTypes[_] == input.review.object.spec.type
        }
